Address key-related warning for dashboard page and fix dashboard page on mobile devices

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,3 +1,7 @@
+.dashboard {
+  max-width: 100%;
+}
+
 .dashboard h1 {
   margin-bottom: 50px;
 }
